--- a/sahankofolder/apnacollegesikeako/stylesheet.css
+++ b/sahankofolder/apnacollegesikeako/stylesheet.css
@@ -1,6 +1,15 @@
-*{
+/* *{
     text-align: center;
-}
+} */
 h1{
     background-color: brown;
+}
+#box{
+width: 250px;
+height: 250px;
+background-color: rgb(255, 147, 242);
+
+border : 5px solid red ;
+ border-radius: 10px;
+ padding: 100px 100px 200px 200px;
 }
