--- a/sahankofolder/classroom/stylesheet.css
+++ b/sahankofolder/classroom/stylesheet.css
@@ -1,4 +1,4 @@
-button{
+/* button{
     color: #24d82d;
     
 }
@@ -30,3 +30,56 @@ text-align: center;
 /* #inner{
     font-size: 10px;
 } */
+/* 
+#red{
+
+    border: 1px;
+    height: 50px;
+    width :50px;
+    border-radius: 50%;
+    background-color: red;
+}
+#green{
+    border: 1px;
+    height: 50px;
+    width :50px;
+    border-radius: 50%;
+    background-color: rgb(0, 255, 55);
+}
+#yellow{
+    border: 1px;
+    height: 50px;
+    width :50px;
+    border-radius: 50%;
+    background-color: rgb(203, 217, 0);
+}
+div{
+
+height: 350px;
+width: 100px;
+background-color: black;
+margin: 30px;
+}
+#gap{
+    height: 3px;
+/* } */ 
+div{
+    background-color: black;
+    height :43px;
+
+}
+#logo{
+margin-left: 25px;
+  font-size: 25px;
+    color: #f08804;
+    
+}
+button{
+    background-color: #f08804;
+    color: white;
+}
+a{
+    color: white;
+    text-decoration: none;
+    margin-right: 160px;
+}
