--- a/sahankofolder/classroom/stylesheet.css
+++ b/sahankofolder/classroom/stylesheet.css
@@ -63,7 +63,7 @@ margin: 30px;
 #gap{
     height: 3px;
 /* } */ 
-div{
+/* div{
     background-color: black;
     height :43px;
 
@@ -82,4 +82,22 @@ a{
     color: white;
     text-decoration: none;
     margin-right: 160px;
+} */
+
+div{
+   
+    height: 100px;
+width: 100px;
+margin: 25px;
+padding: 25px;
+}
+#red{
+    background-color:rgba(255, 00, 00,0.5) ;
+}
+#blue{
+    background-color: blue;
+
+}
+#green{
+    background-color: green;
 }
