--- a/sahankofolder/project1/style.css
+++ b/sahankofolder/project1/style.css
@@ -1,23 +1,64 @@
 *{
-    background-color: black;
+
+ background-color: rgb(0, 0, 0);
 }
 h1{
     text-align: center;
-
+padding-left: 50px;
     width:245px;
     height:75px;
 }
-input{
+input{ 
+    display: flex;
+align-items: center;
+justify-content: center;
     width: 250px;
-    height: 45px;
+    height: 30px;
+    margin:0 auto;
+    border-radius: 5px;
 }
 #loginbutton{
     background-color: #0095f6;
     color: aliceblue;
+    width: 262px;
+    height: 40px;
+    border-radius: 10px;
+   margin-left: 45px;
 }
 #instagram{
     height :408px;
     width: 350px;
     border: 1px solid rgb(149, 149, 149) ;
-    margin: 42px 0px 0px 800px;
+    margin: 42px 0px 0px 0px;
 } 
+p{
+    color: rgb(228, 228, 228);
+    text-align: center;
+font-size: 12px;
+}
+#facebook{
+    
+    margin: 0px 0px 10px 100px;
+}
+a{
+    color: #0095f6;
+    text-decoration: none;
+}
+#fblogo{
+    height: 22px;
+
+    
+}
+#f{
+    color: aliceblue;
+    margin: 0px 0px 0px 132px;
+    font-size: 13px;
+
+}
+#mobile{
+    height: 50px;
+}
+#photo1{
+    display: inline-block;
+
+}
