--- a/sahankofolder/apnacollegesikeako/csslevel3/style.css
+++ b/sahankofolder/apnacollegesikeako/csslevel3/style.css
@@ -1,24 +1,21 @@
 #box1{
-    height: 100px;
-    width: 100px;
+    height: 165px;
+width: 50px;
     background-color: blue;
 }
 #box2{
 
-    height: 50%;
+    height: 100px;
 
-  width: 50%;  
+  width: 100px;  
   background-color: brown;
    
 }
 div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
 }
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 100px;
+#box3{
+    background-color: red;
+    height: 50px;
+    width: 100px;
 }
