--- a/project1/style.css
+++ b/project1/style.css
@@ -3,21 +3,16 @@ background-image: url('background.jpg'); background-size: cover; background-repe
 
 }
 .icon{
-    display:inline;
- padding-top: -20px;
- padding-left: 3.5px;
+    display:block;
+    flex-direction: row;
+
+ 
+ 
 
 }
 .iconkoname{
      color: aliceblue;
    font-size: 13px;
-     margin-top: -5px;
-   
-
-}
-#clock{
-    padding-left: 10px;
-    color: aliceblue;
-   margin-top:  -11px;
-   font-size: 13px;
+  
+margin-top:1px;
 }
